components/nonmem/src/output_files/snapshots/nonmem__output_files__ext__tests__can_extract_estimation_results@1002c.ext.snap
---
source: components/nonmem/src/output_files/ext.rs
expression: "format!(\"{:#?}\", result)"
input_file: components/nonmem/test_data/ext/1002c.ext
---
[
    EstimationResults {
        parameters: TableParameters {
            method: Some(
                Foce,
            ),
            theta: [
                ThetaEstimate {
                    name: "THETA1",
                    estimate: 0.942457,
                    stderr: None,
                    rse: None,
                    fixed: false,
                },
                ThetaEstimate {
                    name: "THETA2",
                    estimate: 3.02992,
                    stderr: None,
                    rse: None,
                    fixed: false,
                },
                ThetaEstimate {
                    name: "THETA3",
                    estimate: 2.0805,
                    stderr: None,
                    rse: None,
                    fixed: false,
                },
                ThetaEstimate {
                    name: "THETA4",
                    estimate: 6.42856,
                    stderr: None,
                    rse: None,
                    fixed: false,
                },
            ],
            random_effects: [
                RandomEffectEstimate {
                    name: "SIGMA(1,1)",
                    param_type: Sigma,
                    random_effect: "EPS1",
                    estimate: 0.00503187,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: false,
                },
                RandomEffectEstimate {
                    name: "SIGMA(2,1)",
                    param_type: Sigma,
                    random_effect: "EPS1:EPS2",
                    estimate: 16.9126,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: false,
                },
                RandomEffectEstimate {
                    name: "SIGMA(2,2)",
                    param_type: Sigma,
                    random_effect: "EPS2",
                    estimate: 56844.7,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: false,
                },
                RandomEffectEstimate {
                    name: "OMEGA(1,1)",
                    param_type: Omega,
                    random_effect: "ETA1",
                    estimate: 0.0109859,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: false,
                },
                RandomEffectEstimate {
                    name: "OMEGA(2,1)",
                    param_type: Omega,
                    random_effect: "ETA1:ETA2",
                    estimate: -0.022249,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: false,
                },
                RandomEffectEstimate {
                    name: "OMEGA(2,2)",
                    param_type: Omega,
                    random_effect: "ETA2",
                    estimate: 0.0652217,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: false,
                },
                RandomEffectEstimate {
                    name: "OMEGA(3,3)",
                    param_type: Omega,
                    random_effect: "ETA3",
                    estimate: 0.0,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: true,
                },
                RandomEffectEstimate {
                    name: "OMEGA(4,4)",
                    param_type: Omega,
                    random_effect: "ETA4",
                    estimate: 0.0,
                    stderr: None,
                    rse: None,
                    shrinkage: None,
                    fixed: true,
                },
            ],
        },
        minimization_results: MinimizationResults {
            ofv: Some(
                1239.1952927987409,
            ),
            condition_number: None,
            termination_code: None,
        },
    },
]
